@@ -14,4 +14,5 @@ added proper signup profile validation
 insurances working now
 emergency contact is done, need one server fix (which is not require changes in app)
 added avatar
-auth, profile main screen design
+auth, profile, main screen design
+main screen WIP due to font oddities
